Fix grey color contrast (menu + Example text)

--- a/styleguide/custom.scss
+++ b/styleguide/custom.scss
@@ -160,8 +160,7 @@ body#kss-node {
         &::before {
             content: 'Example';
             display: block;
-            height: 30px;
-            color: $darkest-shiro;
+            color: $soft-script;
         }
     }
 
