--- a/styleguide/templates/infojobs/public/styleguide.css
+++ b/styleguide/templates/infojobs/public/styleguide.css
@@ -174,6 +174,7 @@
     visibility: visible;
     -webkit-transform: translate3d(-100%, 0, 0);
     transform: translate3d(-100%, 0, 0);
+    border-right: 1px solid #e2e5e6; /* TODO: only show when menu is open by default */
 }
 
 .sg-menu li a.disabled,
